# pxtextmining

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  accuracy_per_class.csv  coverage.xml  docker-requirements.txt  docker_README.md  docker_run.py  finalized_model.sav  finalized_model_4444.sav  index.html  make_sphinx_documentation.sh  mkdocs.yml  mlr3_data_clean_and_prepare.R  mlr3_load_packages.R  mlr3_pipeline_optimal_defaults.R  mlr3_prepare_test_and_training_tasks.R  mlr3_prompt_cv_folds.R  mlr3_prompt_dataset.R  mlr3_prompt_n_evaluations.R  mlr3_prompt_performance_measure.R  mlr3_prompt_resampling_strategy.R  mlr3_prompt_response_name.R  mlr3_prompt_task_id.R  mlr3_prompt_train_test_split.R  mlr3_run_pipeline.R  objects.inv  plot_coeffs.py  pyproject.toml  quanteda_naive_bayes.R  requirements.txt  search.html  setup.cfg  setup.py  site1_final.csv  (+18 more)
Python - older scripts/: text_mining_custom_functions_and_classes.py
R/: measure_prauc.R  mlr3_load_packages.R  mlr3_pipeline_optimal_defaults.R  mlr3_prompt_performance_measure.R  mlr3_prompt_resampling_strategy.R  mlr3_prompt_task_id.R  mlr3_run_pipeline.R  quanteda_naive_bayes.R  starspace.R
Shiny dashboard/: server.R  ui.R
about/: index.html
api/: api.py  requirements.txt  schemas.py  test_api.py  test_api_locally.py
current_best_model/: svc_minorcats_v5.txt
current_best_multilabel/: bert.txt  bert_additional_features.txt  bert_minorcats.txt  bert_sentiment.txt  model_2.sav  svc_additional_features.sav  svc_additional_features.txt  svc_merged.txt  svc_merged_perf.xlsx  svc_minorcats.txt  svc_minorcats_230419.txt  svc_minorcats_230419_perf.xlsx  svc_minorcats_perf.xlsx  svc_minorcats_v5.txt  svc_text_only.txt
datasets/: README.md  text_data.csv  v6framework_230718.csv  v6framework_230831.csv
docker_data/: file_02.json
docs/: .buildinfo  Makefile  about.md  create_docs.py  genindex.html  index.html  index.md  install.md  main.css  make.bat  modules.html  objects.inv  pxtextmining.factories.html  pxtextmining.helpers.html  pxtextmining.html  pxtextmining.pipelines.html  py-modindex.html  reference.md  search.html  searchindex.js  using_trained_model.md
docs_old/: make.bat  pxtextmining.factories.html  search.html
doctrees/: environment.pickle  index.doctree  pxtextmining.doctree  pxtextmining.factories.doctree  pxtextmining.helpers.doctree  pxtextmining.pipelines.doctree
doctrees_old/: environment.pickle  pxtextmining.helpers.doctree
execution/: execution_criticality.py  execution_criticality_no_theme.py  execution_criticality_with_theme.py  execution_label.py  execution_predict.py  test.py
factories/: factory_data_load_and_split.py  factory_data_prepros.py  factory_model_performance.py  factory_pipeline.py  factory_write_results.py
helpers/: estimator_switcher.py  metrics.py  oversampling.py  scaler_switcher.py  sentiment_scores.py  text_length.py  text_preprocessor.py  text_transformer_switcher.py  tokenization.py
notebooks/: Testing_5_level_sentiment.ipynb  Testing_BERT_5_level_sentiment.ipynb
pipelines/: text_classification_pipeline.py
pxtextmining/: README.html  params.py  predict_new_codes_old_data.py  requirements.txt  text_classification_package_structure.pptx
results_criticality/: accuracy_per_class_criticality.csv  index_test_data_criticality.csv  index_training_data_criticality.csv  pipeline_criticality.sav  predictions_criticality.csv  tuning_results_criticality.csv
results_criticality_no_theme/: accuracy_per_class_criticality.csv  index_test_data_criticality.csv  index_training_data_criticality.csv  model_summary.txt  (+3 more)
tests/: conftest.py  (+11 more)
(+229 files in other folders)
