[tool.poetry]
name = "pxtextmining"
version = "0.4.2"
description = "Text classification of patient experience feedback."
authors = ['CDU Data Science <cdudatascience@nottshc.nhs.uk>',
'Andreas D Soteriades <andreas.soteriades@nottshc.nhs.uk>',
'YiWen Hon <yiwen.hon@nottshc.nhs.uk>']
readme = "README.md"
license = "MIT"
repository = "https://github.com/CDU-data-science-team/pxtextmining"
documentation = "https://cdu-data-science-team.github.io/pxtextmining"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
emojis = "^0.6.0"
spacy = "^3.4.4"
imbalanced-learn = "0.7.0"
joblib = "^1.2.0"
matplotlib = "^3.3.2"
mysql-connector-python = "8.0.23"
nltk = "3.6.6"
numpy = ">=1.22"
pandas = "^1.4.0"
scikit-learn = "1.0.2"
seaborn = "0.11.0"
SQLAlchemy = "1.3.23"
textblob = "0.15.3"
vaderSentiment = "3.3.2"
threadpoolctl = "^3.1.0"
tensorflow = "^2.11.0"
tensorflow-addons = "^0.19.0"
transformers = "^4.26.1"
deptry = "^0.7.0"
uvicorn = "^0.20.0"
requests = "2.25.1"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
pytest = "^7.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings-python = "^0.8.2"
mkdocstrings = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
