[tool.poetry]
name = "pxtextmining"
version = "0.5.2"
description = "Multilabel text classification of patient experience feedback."
authors = ['CDU Data Science <cdudatascience@nottshc.nhs.uk>',
'YiWen Hon <yiwen.hon@nottshc.nhs.uk>']
readme = "README.md"
license = "MIT"
repository = "https://github.com/CDU-data-science-team/pxtextmining"
documentation = "https://cdu-data-science-team.github.io/pxtextmining"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
spacy = "^3.4.4"
joblib = "^1.2.0"
matplotlib = "^3.3.2"
numpy = ">=1.22"
pandas = "^1.4.0"
scikit-learn = "1.0.2"
tensorflow = "^2.11.0"
transformers = "^4.26.1"
scipy = "^1.10.1"
xgboost = "^1.7.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
pytest = "^7.2.2"
fastapi = "^0.94.1"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests = "^2.31.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings-python = "^0.8.2"
mkdocstrings = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
